<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/setting_dialog_txt1"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        />

    <LinearLayout style="@style/horizontal_division_line_style" />

    <Button
        android:id="@+id/bt_immediately"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_dialog_txt2"
        android:textColor="@android:color/tertiary_text_dark"
        style="?android:attr/borderlessButtonStyle"
    />

    <LinearLayout style="@style/horizontal_division_line_style" />

    <Button
        android:id="@+id/bt_half_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_dialog_txt3"
        android:textColor="@android:color/tertiary_text_dark"
        style="?android:attr/borderlessButtonStyle"

        />

    <LinearLayout style="@style/horizontal_division_line_style" />

    <Button
        android:id="@+id/bt_one_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_dialog_txt4"
        android:textColor="@android:color/tertiary_text_dark"
        style="?android:attr/borderlessButtonStyle"
        />

    <LinearLayout style="@style/horizontal_division_line_style" />

    <Button
        android:id="@+id/bt_five_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_dialog_txt5"
        android:textColor="@android:color/tertiary_text_dark"
        style="?android:attr/borderlessButtonStyle"
        />

    <LinearLayout style="@style/horizontal_division_line_style" />

    <Button
        android:id="@+id/bt_twelve_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_dialog_txt6"
        android:textColor="@android:color/tertiary_text_dark"
        style="?android:attr/borderlessButtonStyle"
        />

    <LinearLayout style="@style/horizontal_division_line_style" />

</LinearLayout>