<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <include layout="@layout/common_title_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/ll_customer_selector"
            >

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:src="@mipmap/refresh_two"
                tools:ignore="ContentDescription"
                />

            <TextView
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/settings_refresh"
                android:textSize="14sp"
                />

        </LinearLayout>

        <LinearLayout style="@style/horizontal_division_line_style" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:orientation="vertical"
            android:clickable="true"
            >

            <TextView
                android:id="@+id/text0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/settings_auto_refresh"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/text0"
                android:text="@string/settings_open_refresh"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"
                />

            <ImageView
                android:id="@+id/is_refresh_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:clickable="true"
                tools:ignore="ContentDescription"
                />

        </RelativeLayout>

        <LinearLayout style="@style/horizontal_division_line_style" />

        <RelativeLayout
            android:id="@+id/refresh_interval"
            android:layout_width="384dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/settings_refresh_interval"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/interval_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/text1"
                android:text="@string/settings_interval_text"
                android:textSize="12sp"
                />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/arrows"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                />

        </RelativeLayout>

        <LinearLayout style="@style/horizontal_division_line_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/ll_customer_selector"
            >

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:src="@mipmap/location"
                tools:ignore="ContentDescription"
                />

            <TextView
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/settings_location"
                android:textSize="14sp"
                />

        </LinearLayout>

        <LinearLayout style="@style/horizontal_division_line_style" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:orientation="vertical"
            android:clickable="true"
            >

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/settings_auto_location"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/text2"
                android:text="@string/settings_is_location"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"
                />

            <ImageView
                android:id="@+id/is_location_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:clickable="true"
                tools:ignore="ContentDescription"
                />

        </RelativeLayout>

        <LinearLayout style="@style/horizontal_division_line_style" />


    </LinearLayout>
</ScrollView>