<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="290dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#f9f9f9"
    >

    <ImageView
        android:id="@+id/navigation_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/tile_image"
        android:adjustViewBounds="true"
        tools:ignore="ContentDescription"
        />

    <LinearLayout
        android:id="@+id/navigation_location"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/ll_customer_selector"
        android:clickable="true"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/location"
            tools:ignore="ContentDescription"
            />

        <TextView
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:text="@string/navigation_choose_city"
            android:textSize="16sp"
            />

    </LinearLayout>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="@string/navigation_more"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        />

    <LinearLayout
        android:id="@+id/navigation_settings"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/ll_customer_selector"
        android:clickable="true"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/settings"
            />

        <TextView
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:text="@string/navigation_setting"
            android:textSize="16sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/ll_customer_selector"
        android:clickable="true"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/about"
            />

        <TextView
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:text="@string/navigation_about"
            android:textSize="16sp"
            />

    </LinearLayout>

</LinearLayout>